human-intervention-logs/org.apache.maven:maven-compat:3.0/gradle-test/gradle-test-2026-05-09T19-06-44-655705Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.apache.maven:maven-compat:3.0
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2418-194e3af2/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 4 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :tck-test-support:processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2418-194e3af2/tests/src/org.apache.maven/maven-compat/3.0/src/test/java/org_apache_maven/maven_compat/ExpressionDocumenterTest.java:22: error: method containsKeys in class AbstractMapAssert<SELF,ACTUAL,K,V> cannot be applied to given types;
        assertThat(documentationBySyntax).containsKeys("project.artifact", "settings.offline", "localRepository");
                                         ^
  required: CAP#1[]
  found:    String,String,String
  reason: varargs mismatch; String cannot be converted to CAP#1
  where SELF,ACTUAL,K,V are type-variables:
    SELF extends AbstractMapAssert<SELF,ACTUAL,K,V> declared in class AbstractMapAssert
    ACTUAL extends Map<K,V> declared in class AbstractMapAssert
    K extends Object declared in class AbstractMapAssert
    V extends Object declared in class AbstractMapAssert
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object from capture of ?
1 error

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2418-194e3af2/tests/src/org.apache.maven/maven-compat/3.0/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2418-194e3af2/tests/src/org.apache.maven/maven-compat/3.0/src/test/java/org_apache_maven/maven_compat/ExpressionDocumenterTest.java:22: error: method containsKeys in class AbstractMapAssert<SELF,ACTUAL,K,V> cannot be applied to given types;
          assertThat(documentationBySyntax).containsKeys("project.artifact", "settings.offline", "localRepository");
                                           ^
    required: CAP#1[]
    found:    String,String,String
    reason: varargs mismatch; String cannot be converted to CAP#1
    where SELF,ACTUAL,K,V are type-variables:
      SELF extends AbstractMapAssert<SELF,ACTUAL,K,V> declared in class AbstractMapAssert
      ACTUAL extends Map<K,V> declared in class AbstractMapAssert
      K extends Object declared in class AbstractMapAssert
      V extends Object declared in class AbstractMapAssert
    where CAP#1 is a fresh type-variable:
      CAP#1 extends Object from capture of ?
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
11 actionable tasks: 1 executed, 10 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2418-194e3af2/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.apache.maven:maven-compat:3.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
9 actionable tasks: 1 executed, 8 up-to-date
